cloud_app_demo/mlapi/.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-access
spec:
  hosts:
    - gibbons-tony.mids255.com
  gateways:
    - istio-ingress/gibbons-tony-gateway
  http:
    - match:
        - uri:
            prefix: /lab
      route:
        - destination:
            host: lab-prediction-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: /project
      route:
        - destination:
            host: project-prediction-service
            port:
              number: 8000
